# horbot

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  check_history.py  clean_think_tags.py  docker-compose.yml  hello.py  horbot.sh  install.sh  pyproject.toml  test_save.py
docs/: ANALYSIS_ENGINE_CN.md  API.md  API_CN.md  ARCHITECTURE.md  ARCHITECTURE_CN.md  CHANGELOG_CN.md  CONTRIBUTING.md  CONTRIBUTING_CN.md  FILE_UPLOAD_VALIDATION_CN.md  HIERARCHICAL_CONTEXT_CN.md  HOT_RELOAD_CN.md  MULTI_AGENT_GUIDE.md  MULTI_AGENT_GUIDE_CN.md  README.md  README_CN.md  SECURITY.md  SECURITY_CN.md  SKILLS.md  SKILLS_CN.md  USER_MANUAL.md  USER_MANUAL_CN.md
horbot/: __init__.py  __main__.py
horbot/agent/: __init__.py  autonomous.py  background.py  context.py  context_compact.py  context_manager.py  conversation.py  errors.py  loop.py  manager.py  memory.py  message_bus.py  message_processor.py  plan_executor.py  plan_step_subagent.py  planner.py  skill_evolution.py  skill_loader.py  skill_metadata_adapter.py  skill_package.py  skills.py  status.py  subagent.py  task_delegation.py  team_protocols.py  token_tracker.py  tool_executor.py  (+1 more)
scripts/: agent_assets_smoke.py  bound_channel_dispatch_smoke.py  capture_readme_screenshots.py  chat_onboarding_smoke.py  chat_relay_mock_e2e.py  chat_setup_banner_smoke.py  chat_ui_error_retry_smoke.py  chat_ui_interrupt_smoke.py  chat_ui_memory_trace_smoke.py  chat_ui_smoke.py  config_smoke.py  dashboard_smoke.py  external_inbound_memory_smoke.py  performance_smoke.py  playwright_browser.py  reset_all_data.sh  skills_smoke.py  stock_analysis_002746.py
tests/: test_agent_bootstrap_api.py  test_agent_create_api.py  test_agent_delete_api.py  test_agent_loop_save_turn.py  test_architecture_modules.py  test_attachment_context.py  test_bound_channel_dispatch.py  test_channel_diagnostics.py  test_channel_endpoints_api.py  test_channel_telemetry_persistence.py  test_chat_history_api.py  test_chat_session_ids.py  test_chat_session_routing.py  test_chat_sessions_api.py  test_chat_stream_events.py  test_config_normalizer.py  test_config_validator.py  test_dashboard_channel_summary.py  test_dynamic_provider_hot_reload.py  test_error_messages.py  test_external_source_metadata.py  test_gateway_http_api.py  test_group_chat_stream.py  test_legacy_planner_module.py  test_litellm_provider.py  test_mcp_config.py  test_memory_bank_profile.py  test_memory_recall_trace.py  test_memory_store.py  test_message_processor.py  test_mock_chat_relay_e2e.py  test_new_modules.py  test_permission_profiles.py  test_provider_diagnostics.py  test_session_keys.py  test_sharecrm_channel.py  test_skill_evolution.py  test_skill_metadata_adapter.py  test_skill_package.py  test_skills_api.py  (+9 more)
(+331 files in other folders)
